--- a/QLLSP/QLLSP.csproj
+++ b/QLLSP/QLLSP.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database.cs" />
+    <Compile Include="frmCNInformation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCNInformation.Designer.cs">
+      <DependentUpon>frmCNInformation.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDMK.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,7 +71,24 @@
     <Compile Include="frmMainUI.Designer.cs">
       <DependentUpon>frmMainUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login.cs" />
+    <Compile Include="frmNVInformation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNVInformation.Designer.cs">
+      <DependentUpon>frmNVInformation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmQLCN.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmQLCN.Designer.cs">
+      <DependentUpon>frmQLCN.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmQLNV.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmQLNV.Designer.cs">
+      <DependentUpon>frmQLNV.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -84,6 +107,9 @@
     <Compile Include="frmUserInformation.Designer.cs">
       <DependentUpon>frmUserInformation.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmCNInformation.resx">
+      <DependentUpon>frmCNInformation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDMK.resx">
       <DependentUpon>frmDMK.cs</DependentUpon>
     </EmbeddedResource>
@@ -92,6 +118,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMainUI.resx">
       <DependentUpon>frmMainUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNVInformation.resx">
+      <DependentUpon>frmNVInformation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmQLCN.resx">
+      <DependentUpon>frmQLCN.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmQLNV.resx">
+      <DependentUpon>frmQLNV.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUserInformation.resx">
       <DependentUpon>frmUserInformation.cs</DependentUpon>
