--- a/QLLSP/QLLSP.csproj
+++ b/QLLSP/QLLSP.csproj
@@ -96,6 +96,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="QLHD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLHD.Designer.cs">
+      <DependentUpon>QLHD.cs</DependentUpon>
+    </Compile>
     <Compile Include="QLLSPDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -106,6 +112,12 @@
     </Compile>
     <Compile Include="frmUserInformation.Designer.cs">
       <DependentUpon>frmUserInformation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QLSP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLSP.Designer.cs">
+      <DependentUpon>QLSP.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="frmCNInformation.resx">
       <DependentUpon>frmCNInformation.cs</DependentUpon>
@@ -135,6 +147,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QLHD.resx">
+      <DependentUpon>QLHD.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QLSP.resx">
+      <DependentUpon>QLSP.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
